Move record/replay bindings into their own file, add diagnostics for backend issue 2553

--- a/gn/core.gni
+++ b/gn/core.gni
@@ -312,6 +312,8 @@ skia_core_sources = [
   "$_src/core/SkRecordOpts.cpp",
   "$_src/core/SkRecordOpts.h",
   "$_src/core/SkRecordPattern.h",
+  "$_src/core/SkRecordReplay.cpp",
+  "$_src/core/SkRecordReplay.h",
   "$_src/core/SkRecords.cpp",
   "$_src/core/SkRecords.h",
   "$_src/core/SkRect.cpp",
